@@ -22,6 +22,7 @@ Application Fixes:
 - Fixed behaviour of html tooltips used by skill controls not properly being rendered for html. Fixes newlines in notes not working. 
 - Added confirmation prompt to Delete action for skills. 
 - Fixed Extra values not being properly translated for Cyberware when printed. Closes #3990
+- Adept Power Way Discounts are now properly limited to MAG /2. Closes #3618
 
 Application Changes:
 - Added support for Priority mode using non-ABCDE arrays.
